--- a/index.html
+++ b/index.html
@@ -1,302 +1,12 @@
 <!DOCTYPE html>
-
 <html lang="de">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport"/>
-<title>Doggy Style Workspace</title>
-<link href="manifest.json" rel="manifest"/>
-<meta content="#101014" name="theme-color"/>
-<link href="assets/logo.png" rel="apple-touch-icon"/>
-<link href="styles.css" rel="stylesheet"/>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
+  <title>Doggy Style Workspace</title>
+  <meta http-equiv="refresh" content="0; url=login.html"/>
 </head>
 <body>
-<header class="topbar">
-<div class="brand">
-<img alt="Doggy Style" class="brand__logo" src="assets/logo.png"/>
-<div class="brand__text">
-<div class="brand__title">Doggy Style Workspace</div>
-<div class="brand__sub">Formularmappe · Offline · iPad‑freundlich</div>
-</div>
-</div>
-<nav class="tabs" role="tablist">
-<button class="tab is-active" data-tab="home">Start</button>
-<button class="tab" data-tab="documents">Aufenthalte</button>
-<button class="tab" data-tab="dogs">Hunde/Kunden</button>
-<button class="tab" data-tab="settings">Einstellungen</button><button class="tab" data-tab="invoices">Rechnungen</button>
-</nav>
-</header>
-<main class="shell">
-<section class="panel is-active" id="home">
-<section class="dashboard">
-<!-- HERO -->
-<div class="hero-cards">
-<div class="hero-card">
-<div class="hero-header">
-<span class="hero-icon">🐕</span>
-<span class="hero-title">Tagesbetreuung</span>
-</div>
-<div class="hero-value" id="todayDaycareValue">0 / 13</div>
-<div class="hero-bar"><div class="hero-bar-fill" id="todayDaycareBar"></div></div>
-<div class="hero-sub" id="todayDaycareText">Ruhiger Tag</div>
-</div>
-<div class="hero-card">
-<div class="hero-header">
-<span class="hero-icon">🏡</span>
-<span class="hero-title">Urlaubsbetreuung</span>
-</div>
-<div class="hero-value" id="todayBoardingValue">0 / 10</div>
-<div class="hero-bar"><div class="hero-bar-fill" id="todayBoardingBar"></div></div>
-<div class="hero-sub" id="todayBoardingText">Ruhiger Tag</div>
-</div>
-</div>
-<!-- Forecast -->
-<div class="card">
-<h2>Auslastung – nächste 14 Tage</h2>
-<div class="forecast-list" id="forecastList"></div>
-</div>
-<!-- Quick actions -->
-<div class="card">
-<h2>Schnellaktionen</h2>
-<div class="quick-actions">
-<button class="btn primary" onclick="createStay()">➕ Neuer Aufenthalt</button>
-<button class="btn" onclick="openDogs()">🐶 Hunde/Kunden</button>
-<button class="btn" onclick="openInvoices()">🧾 Rechnungen</button>
-<button class="btn" onclick="selectTab('settings')">⚙️ Einstellungen</button>
-</div>
-<!-- Hidden legacy controls (kept for compatibility) -->
-<div class="row" style="display:none">
-<label class="field">
-<span>Vorlage</span>
-<select id="templateSelect"></select>
-</label>
-<button class="btn primary" id="btnNewDoc">Aufenthalt erstellen</button>
-</div>
-<div class="hint">
-<strong>Tipp:</strong> Installiere die App als PWA: In Safari <em>Teilen → Zum Home‑Bildschirm</em>.
-      </div>
-</div>
-<!-- Warnings -->
-<div class="card warning" id="dashboardWarnings" style="display:none"></div>
-<!-- Recent -->
-<div class="card">
-<h2>Zuletzt</h2>
-<div class="list" id="recentList"></div>
-</div>
-</section>
-</section>
-<section class="panel" id="documents">
-<div class="card">
-<div class="row between">
-<h1>Aufenthalte</h1>
-<button class="btn" id="btnExportAll">Export: Backup (JSON)</button>
-</div>
-<div class="list" id="docList"></div>
-</div>
-</section>
-<section class="panel" id="dogs">
-<div class="card">
-<div class="row between">
-<h1>Hunde/Kunden</h1>
-<button class="btn primary" id="btnAddDog">Neu anlegen</button>
-</div>
-<div class="card" id="cpEditor" style="display:none; margin-top:12px;">
-<h2 id="cpEditorTitle">Kunde &amp; Hund</h2>
-<div class="row" style="flex-wrap:wrap; gap:12px;">
-<label class="field" style="min-width:260px;">
-<span><strong>Bestehenden Kunden nutzen</strong></span>
-<input id="useExistingCustomer" style="width:22px;height:22px;" type="checkbox"/>
-</label>
-<label class="field" style="min-width:260px;">
-<span>Kunde auswählen</span>
-<select id="customerSelect"></select>
-</label>
-</div>
-<div class="grid2">
-<div class="card">
-<h3>Kunde (Halter)</h3>
-<div class="row" style="flex-wrap:wrap; gap:12px;">
-<h3>Kunde (Halter)</h3>
-<div class="row" style="flex-wrap:wrap; gap:12px;">
-<label class="field"><span>Name <span class="req">*</span></span><input id="c_name" placeholder="Max Müller" type="text"/></label>
-<label class="field"><span>Telefon <span class="req">*</span></span><input id="c_phone" placeholder="+49 ..." type="tel"/></label>
-</div>
-<details class="opt">
-<summary>Adresse &amp; Kontakt (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field"><span>E‑Mail</span><input id="c_email" placeholder="mail@..." type="email"/></label>
-<label class="field"><span>Straße/Hausnr.</span><input id="c_street" type="text"/></label>
-<label class="field"><span>PLZ</span><input id="c_zip" type="text"/></label>
-<label class="field"><span>Ort</span><input id="c_city" type="text"/></label>
-</div>
-</details>
-<details class="opt">
-<summary>Notfall &amp; Abholung (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field"><span>Notfallkontakt – Name</span><input id="c_em_name" type="text"/></label>
-<label class="field"><span>Notfallkontakt – Telefon</span><input id="c_em_phone" type="tel"/></label>
-<label class="field" style="min-width:100%;"><span>Abholberechtigt (Freitext)</span><input id="c_pickup_auth" placeholder="z.B. Oma, Nachbar, ..." type="text"/></label>
-</div>
-</details>
-<details class="opt" open="">
-<summary>Notizen (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field" style="min-width:100%;"><span>Interne Notiz</span><textarea id="c_note" rows="2"></textarea></label>
-</div>
-</details>
-</div>
-</div>
-<div class="card">
-<h3>Hund</h3>
-<div class="row" style="flex-wrap:wrap; gap:12px;">
-<h3>Hund</h3>
-<div class="row" style="flex-wrap:wrap; gap:12px;">
-<label class="field"><span>Name <span class="req">*</span></span><input id="p_name" placeholder="Bello" type="text"/></label>
-<label class="field"><span>Rasse / Mix</span><input id="p_breed" type="text"/></label>
-<label class="field"><span>Geburtsdatum</span><input id="p_birthdate" type="date"/></label>
-</div>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field"><span>Gechippt? <span class="req">*</span></span>
-<select id="p_chipStatus">
-<option value="">— bitte wählen —</option>
-<option value="yes">Ja</option>
-<option value="no">Nein</option>
-</select>
-</label>
-<label class="field"><span>Chipnummer (wenn Ja)</span><input id="p_chipNumber" type="text"/></label>
-</div>
-<details class="opt">
-<summary>Gesundheit (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field"><span>Tierarzt (Name/Ort)</span><input id="p_vet" type="text"/></label>
-<label class="field"><span>Tierarzt Telefon</span><input id="p_vetPhone" type="tel"/></label>
-<label class="field" style="min-width:100%;"><span>Allergien / Unverträglichkeiten</span><textarea id="p_allergies" rows="2"></textarea></label>
-<label class="field" style="min-width:100%;"><span>Dauermedikation (Name + Dosierung)</span><textarea id="p_meds" rows="2"></textarea></label>
-</div>
-</details>
-<details class="opt">
-<summary>Alltag &amp; Verhalten (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field"><span>Standard-Futter</span><input id="p_food" type="text"/></label>
-<label class="field"><span>Fütterung (Menge/Zeiten)</span><input id="p_feeding" type="text"/></label>
-<label class="field"><span>Verträglichkeit</span><input id="p_compat" placeholder="z.B. freundlich / nur Hündinnen / ..." type="text"/></label>
-<label class="field" style="min-width:100%;"><span>Ängste/Trigger/Besonderheiten</span><textarea id="p_behavior" rows="2"></textarea></label>
-</div>
-</details>
-<details class="opt" open="">
-<summary>Notizen (optional)</summary>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:10px;">
-<label class="field" style="min-width:100%;"><span>Interne Notiz</span><textarea id="p_note" rows="2"></textarea></label>
-</div>
-</details>
-</div>
-</div>
-</div>
-<div class="row" style="gap:10px; margin-top:10px;">
-<button class="btn primary" id="btnCpSave">Speichern</button>
-<button class="btn" id="btnCpCancel">Abbrechen</button>
-</div>
-<div class="hint" id="cpHint" style="margin-top:10px;"></div>
-</div>
-<div class="list" id="dogList"></div>
-</div>
-</section>
-<section class="panel" id="settings">
-<div class="card">
-<h1>Einstellungen</h1>
-<p>Alles bleibt lokal auf deinem Gerät (Offline‑First).</p>
-<div class="row">
-<button class="btn danger" id="btnWipe">Alle lokalen Daten löschen</button>
-</div>
-<div class="hint">
-          PDFs archivierst du am besten in <strong>Dateien</strong> in einem Ordner z. B. <em>DoggyStyle/Docs</em>.
-        </div>
-</div>
-</section>
-<section class="panel" id="invoices">
-<h2>Rechnungen</h2>
-<div id="invoiceList"></div>
-<div id="invoiceView"></div>
-</section>
-<section class="panel" id="editor">
-<div class="card sticky">
-<div class="row between">
-<div>
-<h1 id="editorTitle">Dokument</h1>
-<div class="card" id="versionBox" style="margin-top:12px"></div>
-<div class="muted" id="editorMeta"></div>
-</div>
-<div class="row">
-<button class="btn" id="btnSave">Speichern</button>
-<button class="btn secondary" id="btnCreateInvoice">
-  🧾 Rechnung erstellen
-</button>
-<button class="btn" id="btnPrint">Als PDF speichern (Drucken)</button>
-<button class="btn" id="btnClose">Schließen</button>
-</div>
-</div>
-</div>
-<div class="card">
-<div class="row">
-<label class="field">
-<span>Hund auswählen</span>
-<select id="dogSelect"></select>
-<small class="muted" id="customerInfo" style="display:block;margin-top:6px"></small>
-</label>
-<label class="field">
-<span>Dokument‑Name</span>
-<input id="docName" placeholder="z.B. Hundeannahme_Müller_Bello" type="text"/>
-</label>
-</div>
-</div>
-<div id="editorContent">
-<div id="formRoot"></div>
-</div>
-<div class="card">
-<h2>Datenschutz (DSGVO)</h2>
-<p class="muted" id="dsGvoText"></p>
-</div>
-</section>
-</main>
-<footer class="footer">
-<span>© Doggy Style Workspace · Offline‑PWA</span>
-</footer>
-<!-- Auth Gate (Weg 2B: Cloud-Sync + Rollen) -->
-<div class="authgate" id="authGate" style="display:none">
-<div class="authgate__card">
-<h1>Anmelden</h1>
-<p class="muted" style="margin-top:6px">Damit alle Geräte den gleichen Stand haben, melde dich an.</p>
-<div class="row" style="flex-wrap:wrap; gap:12px; margin-top:14px">
-<label class="field" style="min-width:260px">
-<span>E‑Mail</span>
-<input autocomplete="username" id="loginEmail" placeholder="name@domain.de" type="email"/>
-</label>
-<label class="field" style="min-width:260px">
-<span>Passwort</span>
-<input autocomplete="current-password" id="loginPass" type="password"/>
-</label>
-</div>
-<div class="row" style="gap:10px; margin-top:10px; flex-wrap:wrap">
-<button class="btn primary" id="btnLogin">Anmelden</button>
-<button class="btn" id="btnRegister">Registrieren</button>
-<button class="btn" id="btnLogout" style="display:none">Abmelden</button>
-</div>
-<div class="hint" style="margin-top:12px">
-<strong>Hinweis:</strong> FaceID/TouchID geht über <em>Passkeys</em>. Das schalten wir nach dem Grund-Login frei.
-    </div>
-<div class="muted" id="authMsg" style="margin-top:10px"></div>
-</div>
-</div>
-<!-- Firebase (optional) + Config -->
-<script defer="defer" src="firebase-config.js?v=20251227f"></script>
-<script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
-<script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
-<script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
-<script defer="defer" src="app.js?v=20251227f"></script>
-<script>
-    if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js?v=20251227d');
-  </script>
-<!-- Dummy für Legacy-Signatur -->
-<canvas height="1" id="sigPad" style="display:none" width="1"></canvas>
+  <p>Weiterleitung… Falls nichts passiert: <a href="login.html">Login öffnen</a></p>
 </body>
 </html>
