--- a/app.html
+++ b/app.html
@@ -13,7 +13,7 @@
 <body>
 <header class="topbar">
 <div class="brand">
-<img alt="Doggy Style" class="brand__logo" src="assets/logo.png"/>
+<img alt="Doggy Style" class="brand__logo brand__logo--prominent brand__logo--animated" src="assets/logo.png"/>
 <div class="brand__text">
 <div class="brand__title">Doggy Style Workspace</div>
 <div class="brand__sub">Formularmappe · Offline · iPad‑freundlich</div>
