--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
   <header class="topbar">
     <div class="brand">
-      <img alt="Doggy Style" class="brand__logo brand__logo--big" src="assets/logo.png"/>
+      <img alt="Doggy Style" class="brand__logo brand__logo--big brand__logo--animated" src="assets/logo.png"/>
       <div class="brand__text">
         <div class="brand__title">Doggy Style Workspace</div>
         <div class="brand__sub">Bitte anmelden</div>
