--- a/app.html
+++ b/app.html
@@ -10,7 +10,7 @@
 <link href="assets/logo.png" rel="apple-touch-icon"/>
 <link href="styles.css" rel="stylesheet"/>
 </head>
-<body>
+<body class="bg-watermark page-app">
 <header class="topbar">
 <div class="brand">
 <img alt="Doggy Style" class="brand__logo brand__logo--prominent brand__logo--animated" src="assets/logo.png"/>
@@ -29,6 +29,11 @@
 <main class="shell">
 <section class="panel is-active" id="home">
 <section class="dashboard">
+<div class="dashboard-brand">
+  <img src="assets/logo.png" alt="Doggy Style" class="dashboard-brand__logo"/>
+  <div class="dashboard-brand__title">Doggy Style Workspace</div>
+</div>
+
 <!-- HERO -->
 <div class="hero-cards">
 <div class="hero-card">
