--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
   <link href="assets/logo.png" rel="apple-touch-icon"/>
   <link href="styles.css?v=20251227g" rel="stylesheet"/>
 </head>
-<body>
+<body class="bg-watermark page-login">
   <header class="topbar">
     <div class="brand">
       <img alt="Doggy Style" class="brand__logo brand__logo--big brand__logo--animated" src="assets/logo.png"/>
