--- a/app.html
+++ b/app.html
@@ -379,6 +379,7 @@
 </div>
 <!-- Firebase (optional) + Config -->
 <script defer="defer" src="firebase-config.js?v=20251227g"></script>
+<script defer="defer" src="firebase-config.js?v=20251227h"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
