--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <link href="manifest.json" rel="manifest"/>
   <meta name="theme-color" content="#101014"/>
   <link href="assets/logo.png" rel="apple-touch-icon"/>
-  <link href="styles.css?v=20251227g" rel="stylesheet"/>
+  <link href="styles.css?v=20251227h" rel="stylesheet"/>
 </head>
 <body class="bg-watermark page-login">
   <header class="topbar">
@@ -48,9 +48,9 @@
     </section>
   </main>
 
-  <script defer src="firebase-config.js?v=20251227g"></script>
+  <script defer src="firebase-config.js?v=20251227h"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
-  <script defer src="auth.js?v=20251227g"></script>
+  <script defer src="auth.js?v=20251227h"></script>
 </body>
 </html>
