--- a/login.html
+++ b/login.html
@@ -48,9 +48,9 @@
     </section>
   </main>
 
-  <script defer src="firebase-config.js?v=20251227h"></script>
+  <script defer src="firebase-config.js?v=20251227i"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
-  <script defer src="auth.js?v=20251227h"></script>
+  <script defer src="auth.js?v=20251227i"></script>
 </body>
 </html>
