--- a/app.html
+++ b/app.html
@@ -378,12 +378,11 @@
 </footer>
 </div>
 <!-- Firebase (optional) + Config -->
-<script defer="defer" src="firebase-config.js?v=20251227g"></script>
-<script defer="defer" src="firebase-config.js?v=20251227h"></script>
+<script defer="defer" src="firebase-config.js?v=20251227i"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-auth-compat.js"></script>
 <script defer="defer" src="https://www.gstatic.com/firebasejs/10.12.5/firebase-firestore-compat.js"></script>
-<script defer="defer" src="app.js?v=20251227h"></script>
+<script defer="defer" src="app.js?v=20251227i"></script>
 <script>
     if ('serviceWorker' in navigator) navigator.serviceWorker.register('sw.js?v=20251227d');
   </script>
